Fix nodes div z-index

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    width: 100vw;
-    height: 100vw;
+    z-index: -10;
 }
 
 .node {
